--- a/src/pug/pages/ja/index.pug
+++ b/src/pug/pages/ja/index.pug
@@ -23,7 +23,7 @@ block content
         span フロントエンドエンジニア
     .hero__bg
       picture
-        source(srcset="./../img/mv_sp.jpg", media="(max-width: 768px)", alt="メインビジュアル", width="750", height="800")
+        source(srcset="./../img/mv_sp.jpg", media="(max-width: 768px)", width="750", height="800")
         img(src="./../img/mv_pc.jpg", alt="メインビジュアル", width="1920", height="850")
     .particles(aria-hidden="true")
       span.particle
