--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,7 +16,7 @@
   font-family: "Oswald";
   src: url("./../fonts/Oswald-Bold.woff2") format("woff2");
   font-weight: 700;
-  font-style: bold;
+  font-style: normal;
   font-display: swap;
 }
 
